adds first working version of launch4j to create exe